k8s-manifest/ingress/website-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-external
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: website.cinema-production.svc.cluster.local
