k8s-manifest/ingress/website-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: cinema.test.harbourq.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-external
            port:
              number: 80
